<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    tools:context=".uIBackend.SignUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/register_driver_info"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_name_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:autofillHints="@string/enter_name"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_cnic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:autofillHints="@string/cnic_number"
        android:hint="@string/cnic_number"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:autofillHints="@string/address"
        android:hint="@string/address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:autofillHints="@string/phone_no"
        android:hint="@string/phone_no"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_rented_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:autofillHints="@string/rented_car_name"
        android:hint="@string/rented_car_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:autofillHints="@string/car_model_number"
        android:hint="@string/car_model_number"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_round"
            android:textColor="@android:color/white"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_cancel_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_round"
            android:textColor="@android:color/white"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/all_fields_are_mandatory"
        android:textSize="14sp" />
</LinearLayout>