<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    tools:context=".uIBackend.SignUp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_pass_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_submit_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_round"
            android:textColor="@android:color/white"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btn_cancel_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_round"
            android:textColor="@android:color/white"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>