<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:background="@color/colorPrimaryLight"
    tools:context=".uIBackend.MainActivity">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/ic_splash_image"
        android:contentDescription="@string/car_renting_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_round"
            android:textColor="@android:color/white"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_round"
            android:textColor="@android:color/white"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/sign_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:text="@string/label_main_screen"
        android:textStyle="bold" />

</LinearLayout>